map vis and date picker implemented

--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,68 @@
 body {
-    margin: 0px;
-    overflow: hidden;
-    background-color: black;
-  }
+  width: 100%; 
+  height: 100vh;
+  margin: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #222;
+}
+
+.vis-title {
+  color: white;
+  font-size: 20px;
+  font-family: "Avenir Next";
+}
+
+.vis-container {
+  width: 80%; 
+  height: 80%; 
+  background-color: #222;
+}
+
+.map-svg {
+  display: block;
+}
+
+.sphere {
+  fill: transparent;
+}
+
+.country {
+  fill: darkgray;
+  stroke: black;
+  stroke-width: 0.05px;
+}
+
+.country:hover {
+  fill: red;
+}
+
+/* date picker  */
+
+.date-container {
+  margin-top: 20px;
+  width: 1211px; 
+  height: 37px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-image: url('./date-picker.png');
+  background-size: cover;
   
-  .sphere {
-    fill: transparent;
-  }
-  
-  .country {
-    fill: darkgray;
-    stroke: black;
-    stroke-width: 0.05px;
-  }
-  
-  .country:hover {
-    fill: red;
-  }
+}
+
+.date-bar {
+  width: 100%; 
+  height: 15px; 
+  border-radius: 50px;
+  background-color: red;
+}
+
+.date-circle {
+  width: 35px;
+  height: 35px;
+  border-radius: 50px;
+  background-color: aqua;
+}
