--- a/styles.css
+++ b/styles.css
@@ -1,61 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
+
 body {
-    background-color: #222;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    background-color: #222;
 }
 .names {
     fill: none;
     stroke: #fff;
     stroke-linejoin: round;
-    }
+}
   
 /* Tooltip CSS */
 .d3-tip {
     line-height: 1.5;
     font-weight: 400;
-    font-family:"avenir next", Arial, sans-serif;
+    font-family: 'Lato', sans-serif;    
     padding: 6px;
     background: rgba(0, 0, 0, 0.6);
     color: #FFA500;
     border-radius: 1px;
     pointer-events: none;
-}
-
-/* Northward tooltips */
-.d3-tip.n:after {
-    content: "\25BC";
-    margin: -1px 0 0 0;
-    top: 100%;
-    left: 0;
-    text-align: center;
-}
-
-/* Eastward tooltips */
-.d3-tip.e:after {
-    content: "\25C0";
-    margin: -4px 0 0 0;
-    top: 50%;
-    left: -8px;
-}
-
-/* Southward tooltips */
-.d3-tip.s:after {
-    content: "\25B2";
-    margin: 0 0 1px 0;
-    top: -8px;
-    left: 0;
-    text-align: center;
-}
-
-/* Westward tooltips */
-.d3-tip.w:after {
-    content: "\25B6";
-    margin: -4px 0 0 -1px;
-    top: 50%;
-    left: 100%;
 }
 
 .details{
@@ -65,8 +32,8 @@ body {
 .title {
     margin-top: 80px;
     color: white;
-    font-family: "Avenir Next";
-    font-weight: 500;
+    font-family: 'Lato', sans-serif;    
+    font-weight: 700;
 }
 
 .timeline-container {
@@ -77,9 +44,6 @@ body {
     justify-content: space-between;
     border-radius: 50px;
     border: 1px solid #5E5E5E;
-    /* background-image: url('./timeline.png');
-    background-size: contain;
-    background-repeat: no-repeat; */
     position:relative;
 }   
 
@@ -118,8 +82,8 @@ body {
 
 span {
     color: white;
-    font-family: "Avenir Next";
-    font-weight: 300;
+    font-family: 'Lato', sans-serif;    
+    font-weight: 400;
 }
 
 .legend {
@@ -152,9 +116,9 @@ span {
 .legend-label {
     display: block;
     text-align: right;
-    font-family: "Avenir Next";
+    font-family: 'Lato', sans-serif;    
     font-size: 18px;
-    margin-bottom: 25px;
+    margin-bottom: 28px;
     margin-right: 10px;
 }
 
